--- a/Hibernate/src/main/webapp/StoreProduct.html
+++ b/Hibernate/src/main/webapp/StoreProduct.html
@@ -8,14 +8,14 @@
 <h2>Add Product</h2>
 <form action="ProductController" method="post">
 <label>Product_Id</label>
-<input type="number" name="pid"><br/>
+<input type="number" name="id"><br/>
+<br/>
 <label>Product_Name</label>
 <input type="text" name="pname"><br/>
-<label>Color</label>
-<input type="text" name="color"><br/>
+<br/>
 <input type="submit" value="Store Product">
 <input type="reset" value="reset">
 </form>
 <br/>
-<a href="index1.html">Main Page</a>
+<a href="index.html">Main Page</a>
 </body>
